@@ -2,6 +2,7 @@
 ---
 * Fixed a bug related to the wrapper-option, where all ancestor-elements that matched the wrapper-option where selected
 * Updated multipart demo to use latest jQuery UI accordion
+* Added dateNL and time methods to additionalMethods.js
 
 1.5.2
 ---
